<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:orientation="vertical">

<TabHost
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/tab3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_sleep"
                        android:layout_width="64dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/button_startepc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start" />

                    <Button
                        android:id="@+id/button_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SEARCH" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workareas"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/str_workareas" />

                        <Spinner
                            android:id="@+id/spinner_workareas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workchannel"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/str_workchannel" />

                        <Spinner
                            android:id="@+id/spinner_workchannel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workautofh"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_workautofh" />

                        <Spinner
                            android:id="@+id/spinner_workautofh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workpower"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_workpower" />

                        <Spinner
                            android:id="@+id/spinner_workpower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_continnouswave"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_continnouswave" />

                        <Spinner
                            android:id="@+id/spinner_workcontinnouswave"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workmodem_mixer"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_workmodem_mixer" />

                        <Spinner
                            android:id="@+id/spinner_workmoden_mixer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_workmodem_ifamp"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/str_workmodem_ifamp" />

                        <Spinner
                            android:id="@+id/spinner_workmoden_ifamp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/textView_epc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tableRow1"
                    android:drawSelectorOnTop="false" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textview_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#A7A5A5"/>
                <!--调用外部控件的布局list_item布局。-->
                <include
                    layout="@layout/item_list_epc"
                    android:id="@+id/table_title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dip"
                    android:background="#686867"/>
                <ListView
                    android:id="@+id/listView_epc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tableRow1"
                    android:drawSelectorOnTop="false" />
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>

</LinearLayout>